@@ -19,6 +19,7 @@
     <title>Core VIPS API</title>
     <xi:include href="xml/image.xml"/>
     <xi:include href="xml/header.xml"/>
+    <xi:include href="xml/callback.xml"/>
     <xi:include href="xml/meta.xml"/>
     <xi:include href="xml/buf.xml"/>
   </chapter>
