@@ -53,6 +53,7 @@
 - gtk-doc comments for meta
 - gtk-doc comments for header
 - im_printlines(), im_debugim() deprecated (use im_vips2csv() instead)
+- callback gtkdocs
 
 25/3/09 started 7.18.0
 - revised version numbers
